spade-tests/src/snapshots/spade_tests__ast_lowering__ports_can_not_contain_values.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Non-port in port struct
  ┌─ testinput:2:8
  │
1 │ struct port A {
  │        ---- A is a port struct
2 │     x: int<32>,
  │        ^^^^^^^ This is not a port type
  │
  = note: All members of a port struct must be ports
  = Consider making x a wire
  │
2 │     x: &int<32>,
  │        +


